inc_dirs = include_directories('include')

# Interface library
gr4_tutorial_blocks = library(
  'gr4-tutorial-blocks',
  sources: [],
  include_directories: inc_dirs,
  dependencies: [gr4_dep],
  install: true  # Set true if you plan to install it
)

# Expose the dependency for subprojects or installation
gr4_tutorial_blocks_dep = declare_dependency(
  link_with: gr4_tutorial_blocks,
  include_directories: inc_dirs
)

# Add subdirectory for tests
subdir('test')